# binding-open-vlm

./: .gitignore  Explore.ipynb  Plot Interpretability result.ipynb  Plotter.ipynb  README.md  Untitled.ipynb  aggregate_vlm_2d.py  aggregate_vlm_3d.py  experiments_job.sbatch  experiments_job_3d.sbatch  export_first_rows.py  generate-dataset.sbatch  generate_3d_vlm_datasets.sh  generate_limited_probing_dataset.sbatch  idefics2_vl_job.sbatch  internvl2_job.sbatch  main.py  notebook.ipynb  plot_global_fpr_heatmaps.ipynb  plotter_updated.ipynb  probing description.ipynb  probing_global_job.sbatch  probing_global_job.sbatch.bak  probing_global_job_limited.sbatch  probing_job.sbatch  pyproject.toml  qwen2_vl_7b_job.sbatch  qwen3_vl_job.sbatch  requirement.txt  sample_answers.json  single_image_hf.sbatch  single_image_interactive_debug.ipynb  single_image_lmdeploy.sbatch  utils.py
3d-dataset-generation/: gen_blender.py  gen_tti_binding.py  gen_tti_counting.py  gen_vlm_binding.py  gen_vlm_counting.py  gen_vlm_popout.py  gen_vlm_rmts.py  gen_vlm_search.py
3d_dataset/: README.md  __init__.py  devices.py  gen_blender.py  generate_3d_all.sh  generate_3d_task.sh  merge_3d_metadata.sh  sampling.py
Docs/: probing.md
analysis/: plot_global_probe_performance.ipynb
examples/: blip2_vl_job.sbatch  idefics2_vl_job.sbatch  qwen3_vl_job.sbatch  test_blip2_vl.py  test_idefics2_vl.py  test_qwen3_vl.py  test_qwen3_vl_transformers.py
models/: blip2_model.py  deepseek_vl_model.py  gemma3_model.py  idefics2_model.py  intern_model.py  llava_model.py  model.py  qwen_model.py
(+82 files in other folders)
