[project]
name = "binding"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "einops>=0.8.1",
    "glasbey>=0.3.0",
    "huggingface-hub>=0.25.2",
    "hydra-core>=1.3.2",
    "lmdeploy>=0.10.2",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "omegaconf>=2.3.0",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "pyrootutils>=1.0.4",
    "requests>=2.32.5",
    "scikit-learn==1.8.0",
    "sentencepiece>=0.2.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.6",
    "hydra-core==1.3.2",
    "ipykernel==7.1.0",
    "ipython==9.9.0",
    "jupyter==1.1.1",
    "lmdeploy==0.11.0",
    "matplotlib==3.10.8",
    "notebook==7.5.2",
    "scipy==1.16.3",
    "transformers==4.57.6",
]
